<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/hint_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <group android:menuCategory="container">
        <item android:id="@+id/menu_favorite"
            android:title="@string/menu_favorite"
            android:icon = "@drawable/ic_favorite_white"
            app:showAsAction="always" />
        <item android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:icon = "@drawable/ic_settings_white"
            app:showAsAction="always" />
    </group>
</menu>