<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TransparentText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="10dp"
                    tools:src="@tools:sample/avatars" />

                <ProgressBar
                    android:id="@+id/pb_iv"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="10dp"
                    tools:visibility="gone" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/name"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/pb_tv_name"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="18sp"
                    android:layout_height="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    tools:visibility="gone" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ProgressBar
                    android:id="@+id/pb_tv_username"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    tools:visibility="gone" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="70dp"
                    app:cardCornerRadius="18dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp"
                        tools:ignore="DisableBaselineAlignment">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tab_1"
                                android:textColor="?attr/colorPrimaryInverse"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tv_followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/number"
                                android:textSize="15sp"
                                android:textColor="?attr/colorPrimaryInverse"
                                android:textStyle="bold" />

                            <ProgressBar
                                android:id="@+id/pb_tv_followers"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="15sp"
                                android:layout_height="15sp"
                                tools:visibility="gone" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tab_2"
                                android:textColor="?attr/colorPrimaryInverse"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/tv_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/number"
                                android:textSize="15sp"
                                android:textColor="?attr/colorPrimaryInverse"
                                android:textStyle="bold" />

                            <ProgressBar
                                android:id="@+id/pb_tv_following"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="15sp"
                                android:layout_height="15sp"
                                tools:visibility="gone" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Repository"
                                android:textSize="15sp"
                                android:textColor="?attr/colorPrimaryInverse"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:id="@+id/tv_repository"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/number"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textColor="?attr/colorPrimaryInverse"
                                tools:ignore="HardcodedText" />

                            <ProgressBar
                                android:id="@+id/pb_tv_repository"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="15sp"
                                android:layout_height="15sp"
                                tools:visibility="gone" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_follow"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_follow"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            app:tabBackground="?attr/colorContainer"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/gray"
            tools:ignore="PrivateResource" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_follow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>